api.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample1-service
spec:
  selector:
    app: sample1
  ports:
    - name: http
      port: 80
      targetPort: 9090
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample1-deployment
spec:
  selector:
    matchLabels:
      app: sample1
  replicas: 2
  template:
    metadata:
      labels:
        app: sample1
    spec:
      serviceAccountName: sample1-service-account
      containers:
        - name: sample1-container
          image: nicholasjackson/fake-service:v0.23.1
          ports:
            - containerPort: 9090
---

apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order
  ports:
    - name: http
      port: 80
      targetPort: 9090
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
spec:
  selector:
    matchLabels:
      app: order     
  replicas: 2
  template:
    metadata:
      labels:
        app: order
        version: v1
    spec:
      serviceAccountName: order-service-account
      containers:
        - name: order-container
          image: nicholasjackson/fake-service:v0.23.1
          ports:
            - containerPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-canary-deployment
spec:
  selector:
    matchLabels:
      app: order
  replicas: 2
  template:
    metadata:
      labels:
        app: order
        version: v1
    spec:
      serviceAccountName: order-service-account
      containers:
        - name: order-canary-container
          image: nicholasjackson/fake-service:v0.23.1
          ports:
            - containerPort: 9090
