payment.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    app: payment1
  ports:
    - name: http
      port: 80
      targetPort: 9090
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment1-deployment
spec:
  selector:
    matchLabels:
      app: payment1
  replicas: 2
  template:
    metadata:
      labels:
        app: payment1
    spec:
      serviceAccountName: payment-service-account
      containers:
        - name: payment1-container
          image: nicholasjackson/fake-service:v0.23.1
          ports:
            - containerPort: 9090
