orderVirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ordervirtualservice
spec:
  hosts:
    - order-service
  http:
  - match:
    - headers:
        end-user:
          exact: daljeet
    - headers:
        end-user:
          exact: daljeet12  #OR condition tested, if one of the condition is true.  
    - uri:
        prefix: "/sample1-service/api/v2/orders"      
    route:
    - destination:
        host: order-service
        subset: v2
  - route:
    - destination:
        host: order-service
        subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: order-service
spec:
  host: order-service
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
