virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample1-service
spec:
  hosts:
  - '*'
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        prefix: /sample1-service
    route:
    - destination:
        host: sample1-service
